--- a/views/About.ejs
+++ b/views/About.ejs
@@ -9,6 +9,7 @@
           <li><a href="#" onclick="openTab(event, this, 'blog')" class="menu-link active disabled"><i class="fas fa-scroll mr-2"></i> Blog <i class="fas fa-chevron-right chev"></i></a></li>
           <li><a href="#" onclick="openTab(event, this, 'bio')" class="menu-link"><i class="fas fa-address-card mr-2"></i> Biographie <i class="fas fa-chevron-right chev"></i></a></li>
           <li><a href="#" onclick="openTab(event, this, 'contact')" class="menu-link"><i class="fas fa-envelope mr-2"></i> Contact <i class="fas fa-chevron-right chev"></i></a></li>
+          <li><a href="/CGU"  class="menu-link"><i class="fa fa-gavel mr-2"></i> Legal <i class="fas fa-chevron-right chev"></i></a></li>
         </ul>
       </div>
   
@@ -19,7 +20,7 @@
             <div class="section-heading">
                 <h2>Contact</h2>
                 <h5>Nous avons besoin de ces informations pour pouvoir vous répondre...</h5>
-                <h6>Sinon, vous pouvez nous envoyer un mail directement à l'adresse <b>Maral.canvas@gmail.com</b></h6>
+                <h6>Sinon, vous pouvez nous envoyer un mail directement à l'adresse <b>abkarianpatricia@gmail.com</b></h6>
             </div>
             <form class="col-10 offset-1 mt-4" id="contact" method="POST" onsubmit="submitContact(event)" action="/api/contact/">
                 <div class="row">
