--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -3,7 +3,7 @@
 <script src="/scripts/gallery/infiniteTags.js"></script>
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
-<div class="container">
+<div class="container gallery-mode">
 	<form class="col-6 offset-3" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
 		<label class="control-label search-label">Filtrer par tags</label>
 		<input class="form-control" type="text" placeholder="Entrez un mot puis appuyez sur entrer..." value="" data-role="tagsinput" id="tagInput" />
