--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="container" style="position: sticky;"> 
+<div class="container container-front" style="position: sticky;"> 
   <div class="carousel-container">
   <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
     <!--Slides-->
