--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,19 +1,7 @@
 <footer>
-  <div class="footer-links col-md-12 mb-md-0">
-    <ul class="footer-list">
-      <li>
-        <a href="#!" class="social-btn"><i class="fab fa-instagram"></i></a>
-      </li>
-      <li>
-        <a href="#!" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-      </li>
-      <li>
-        <a href="#!" class="social-btn"><i class="fab fa-pinterest-p"></i></a>
-      </li>
-    </ul>
-  </div>
+
   <div class="footer-copyright text-center">
-    © 2020 Copyright Maral - Développé par <a href="https://github.com/ablin42"> @ablin42</a>
+    <p class="mb-0 p-1">© 2020 Copyright Maral - Développé par <a id="ablin" href="https://github.com/ablin42"> @ablin42</a></p>
   </div>
 </footer>
 </body>
