--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -83,14 +83,16 @@
 				<div class="box">
 					<div class="section-heading mb-5">
 						<h2>Récupération de mot de passe</h2>
-						<h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
+						<h6>Nous vous enverrons un mail pour réinitaliser votre mot de passe</h6>
 					</div>
 					<form class="col-8 offset-2" id="lostpw" onsubmit="submitLostpw(event)" method="POST" action="/api/user/lostpw">
 						<input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="" onkeyup="Validate.Email(this);" required />
 						<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-						<div class="recaptcha-wrapper"></div>
+						<div class="text-center">
+							<div class="recaptcha-wrapper"></div>
+						</div>
 						<input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw" />
 					</form>
 				</div>
