--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -3,14 +3,17 @@
 <script src="/scripts/gallery/infiniteTags.js"></script>
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
-<div class="container gallery-mode">
-	<form class="col-6 offset-3" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
-		<label class="control-label search-label">Filtrer par tags</label>
-		<input class="form-control" type="text" placeholder="Entrez un mot puis appuyez sur entrer..." value="" data-role="tagsinput" id="tagInput" />
+
+<div class="">
+	<form class="col-6 offset-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
+		<label class="control-label search-label">Filter by tags</label>
+		<input class="form-control" type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
 		<span data-placeholder="Tags"></span>
 
-		<input type="submit" class="logbtn mb-2" value="Filter" id="submit-tags" />
+		<input type="submit" class="logbtn mb-2 mt-0" value="Filter" id="submit-tags" />
 	</form>
+</div>
+<div class="container gallery-mode">
 	<div class="container-gallery" id="container-gallery">
 		<% if(locals.galleries){ %> <% Object.keys(locals.galleries).forEach(function (index) { %>
 		<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
@@ -18,16 +21,17 @@
 				<a href="#expand">
 					<img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100" alt="<%= locals.galleries[index].title %>" />
 				</a>
-				<div class="blog-overlay">
-					<h4 class="card-title">
+
+				<div class="blog-overlay" onclick="expand('<%= locals.galleries[index]._id %>', event, true)">
+					<h4>
 						<i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i>
 					</h4>
-					<div class="gallery-tags mt-5">
+					<div class="gallery-tags mt-2">
 						<% locals.galleries[index].tags.forEach(function (tag) { %>
 						<a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
 						<% }) %>
 					</div>
-					<form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+					<form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">See More</button></form>
 				</div>
 			</div>
 		</div>
