--- a/views/cgu.ejs
+++ b/views/cgu.ejs
@@ -2,7 +2,7 @@
 
 <div class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1">
+		<div class="col-10 offset-1 content-wrapper p-5">
 			<p style="text-align: center;">MENTIONS LEGALES :</p>
 
 			<p style="text-align: justify;">
@@ -17,19 +17,18 @@
 				Le Propriétaire est : <strong>Seyrene Hagiakian </strong><br />
 				Adresse postale du propriétaire : <strong>11 rue jouye-rouve 75020 Paris</strong><br />
 				<br />
-				Le Créateur du site est : <strong>Andréas Blin</strong><br />
+				Le Créateur du site est : <strong>Blin Andréas</strong><br />
 				Le Responsable de la  publication est : <strong>Hagiakian Seyrene</strong><br />
 				Contacter le responsable de la publication : <strong>seyrene.h@gmail.com</strong><br />
 				Le responsable de la publication est une<strong> personne physique</strong><br />
 				<br />
 				Le Webmaster est  : <strong>Blin Andréas</strong><br />
-				Contacter le Webmaster : <strong><a href="mailto:Space6fic@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site maral.fr">Space6fic@gmail.com</a></strong
+				Contacter le Webmaster : <strong><a href="mailto:ablin.dev@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site maral.fr">ablin.dev@gmail.com</a></strong
 				><br />
 				L’hebergeur du site est : <strong>Heroku 50 Fremont St. Suite 300 94105 San Francisco, CA</strong><br />
 				<strong><u>CREDIT :</u> </strong> Les mentions légales ont étés générées par<strong>
 					<a href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html" target="_blank">générateur de mentions legales</a></strong
 				><br />
-				Une eau toujours potable avec les <strong><a href="https://www.chamarrel.com/perles-de-ceramique-em-pxl-29_37.html">perles de céramique</a></strong>
 			</p>
 
 			<p style="text-align: justify;"></p>
@@ -65,7 +64,7 @@
 				Seyrene Hagiakian est propriétaire exclusif de tous les droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, tant sur la structure
 				que sur les textes, images, graphismes, logo, icônes, sons, logiciels…<br />
 				Toute reproduction totale ou partielle du site maral.fr, représentation, modification, publication, adaptation totale ou partielle de l'un quelconque de ces éléments, quel que soit le moyen ou
-				le procédé utilisé, est interdite, sauf autorisation écrite préalable de Seyrene Hagiakian , propriétaire du site à l'email : Space6fic@gmail.com, à défaut elle sera considérée comme
+				le procédé utilisé, est interdite, sauf autorisation écrite préalable de Seyrene Hagiakian , propriétaire du site à l'email : ablin.dev@gmail.com, à défaut elle sera considérée comme
 				constitutive d’une contrefaçon et passible de poursuite conformément aux dispositions des articles L.335-2 et suivants du Code de Propriété Intellectuelle.
 			</p>
 
@@ -98,7 +97,7 @@
 				l'utilisateur du site maral.fr l’obligation ou non de fournir ces informations.<br />
 				Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative à l’informatique, aux fichiers et aux libertés, tout utilisateur dispose d’un droit
 				d’accès, de rectification, de suppression et d’opposition aux données personnelles le concernant. Pour l’exercer, adressez votre demande à maral.fr par email :
-				<strong><a href="mailto:Space6fic@gmail.com?subject=Contact ï¿½ partir des mentions lï¿½gales via le site maral.fr">seyrene.h@gmail.com</a></strong> ou par écrit dûment signée, accompagnée
+				<strong><a href="mailto:ablin.dev@gmail.com?subject=Contact ï¿½ partir des mentions lï¿½gales via le site maral.fr">seyrene.h@gmail.com</a></strong> ou par écrit dûment signée, accompagnée
 				d’une copie du titre d’identité avec signature du titulaire de la pièce, en précisant l’adresse à laquelle la réponse doit être envoyée.
 			</p>
 
@@ -322,7 +321,7 @@
 				mode d’utilisation du produit. Conformément à l’article L112-1 du Code la consommation, le consommateur est informé, par voie de marquage, d’étiquetage, d’affichage ou par tout autre procédé
 				approprié, des prix et des conditions particulières de la vente et de l’exécution des services avant toute conclusion du contrat de vente. Dans tous les cas, le montant total dû par l’Acheteur
 				est indiqué sur la page de confirmation de la commande. Le prix de vente du produit est celui en vigueur indiqué au jour de la commande, celui-ci ne comportant par les frais de ports facturés
-				en supplément. Ces éventuels frais sont indiqués à l’Achteur lors du process de vente, et en tout état de cause au moment de la confirmation de la commande. Le Vendeur se réserve la
+				en supplément. Ces éventuels frais sont indiqués à l’Acheteur lors du process de vente, et en tout état de cause au moment de la confirmation de la commande. Le Vendeur se réserve la
 				possibilité de modifier ses prix à tout moment, tout en garantissant l’application du prix indiqué au moment de la commande. Lorsque les produits ou services ne sont pas exécuté immédiatement,
 				une information claire est donnée sur la page de présentation du produit quant aux dates de livraison des produits ou services. Le client atteste avoir reçu un détail des frais de livraison
 				ainsi que les modalités de paiement, de livraison et d’exécution du contrat, ainsi qu’une information détaillée relative à l’identité du vendeur, ses coordonnées postales, téléphoniques et
