--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -7,14 +7,8 @@
 <div class="container container-single"> 
   <div class="single-wrapper">
   <% if (locals.gallery) { %>
-    <div class="col-10 offset-1" id="<%= locals.gallery._id %>">
-      <h3 class="single-title col-12"><%= locals.gallery.title %>
-        <% if (locals.user && locals.user.role === "admin") { %>
-          <a href="/Admin/Galerie/Patch/<%= locals.gallery._id %>"><i class="fas fa-edit"></i></a>
-        <% } %> 
-      </h3>  
-
-      <div class="carousel-container mt-3">
+    <div class="col-10 offset-1 content-wrapper" id="<%= locals.gallery._id %>">
+      <div class="carousel-container">
         <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <% if (locals.images) { %>
@@ -39,55 +33,60 @@
           <!--/.Controls-->
         </div>
       </div>
-      <div class="thumbnail-wrapper mb-4 mt-3">
+      <div class="thumbnail-wrapper mb-2 mt-3">
         <ol class="carousel-indicators no-thumb">
           <% if (locals.images) { %>
             <% locals.images.forEach(function (item, index) { %>
               <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
-                <img class="d-block w-100" src="/img/white_circle.png" alt="..." class="img-fluid">
+                <img class="d-block w-100" src="/img/grey_circle.png" alt="..." class="img-fluid">
               </li>
             <% }) %>
           <% } %>
         </ol>
       </div>
 
-      <div class="text-center">
+      <div class="blog-content col-10 offset-1 mt-3 pt-4">
+         <h3 class="single-title col-12 mb-0"><%= locals.gallery.title %>  <% if (locals.user && locals.user.role === "admin") { %>
+          <a href="/Admin/Galerie/Patch/<%= locals.gallery._id %>"><i class="fas fa-edit"></i></a>
+        <% } %> </h3>
+        <p class="p-4 mb-0 single-content">
+          <%= locals.gallery.content %>
+        </p>
+      </div>
+
+      <div class="text-center tags-wrapper m-2 mb-3">
         <% locals.gallery.tags.forEach(function (tag) { %>
           <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
         <% }) %>
       </div>
 
-      <p class="blog-content col-10 offset-1 mt-2"><%= locals.gallery.content %></p>
-
       <div class="col-10 offset-1 text-center">
-        <div class="pwinty-products">
-          <div class="form-group text-center" id="categories">
+        <p class="pwinty-disclaimer">For references, check the catalog <a href="/Catalog" target="_blank">HERE</a> </p>
+        <div class="form-group pwinty-wrapper" id="categories">
             <label for="framed">
-              <div class="sku-item unselectable">
+              <div class="sku-item unselectable cat-list" onclick="toggleActive(this, 'active-cat');">
                 <p>Framed Print</p>
-                <input name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
+                <input class="pwinty-input" name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
               </div>
             </label>
     
             <label for="print">
-              <div class="sku-item unselectable">
+              <div class="sku-item unselectable cat-list" onclick="toggleActive(this, 'active-cat');">
                 <p>Art Prints</p>
-                <input name="pwinty-category" id="print" value="PRINT" type="radio" onclick="loadCategory(this)">
+                <input class="pwinty-input" name="pwinty-category" id="print" value="PRINT" type="radio" onclick="loadCategory(this)">
               </div>
             </label>
 
             <label for="canvas">
-              <div class="sku-item unselectable">
+              <div class="sku-item unselectable cat-list" onclick="toggleActive(this, 'active-cat');">
                 <p>Canvas</p>
-                <input name="pwinty-category" id="canvas" value="CAN" type="radio" onclick="loadCategory(this)">
+                <input class="pwinty-input" name="pwinty-category" id="canvas" value="CAN" type="radio" onclick="loadCategory(this)">
               </div>
             </label>
+          </div><hr class="hr-pwinty"/>
 
-            <h4 style="color: white">Please note that some very specific combinations of attributes may be unavailable</h1>
-          </div>
-
-          <div class="form-group text-center" id="subcategories"></div>
-          <div class="form-group text-center" id="attributes"></div>
+          <div class="form-group text-center pwinty-wrapper" id="subcategories"></div><hr class="hr-pwinty"/>
+          <div class="form-group text-center pwinty-wrapper" id="attributes"></div>
         </div>
 
         <div style="height: 200px">
@@ -96,7 +95,6 @@
             <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.gallery._id %>', this)">
           </div>
         </div>
-    </div>
     </div>
   <% } %>
   </div>
@@ -109,9 +107,19 @@
 </a>
 
 <script>
+  function toggleActive(item, className) {
+    document.querySelectorAll(`.${className}`).forEach(obj => {
+      obj.classList.remove(`${className}`)
+    })
+
+		item.classList.add(`${className}`)
+  }
+</script>
+
+<script>
 $('#carousel-thumb').on('slide.bs.carousel', function (element) {
-  $("div.thumbnail-wrapper.mb-3 > ol > li.active").removeClass("active");
-  $(`div.thumbnail-wrapper.mb-3 > ol > li:nth-child(${element.to + 1})`).addClass("active");
+  $("div.thumbnail-wrapper > ol > li.active").removeClass("active");
+  $(`div.thumbnail-wrapper > ol > li:nth-child(${element.to + 1})`).addClass("active");
 })
 </script>
 <script src="/scripts/frontValidation.js"></script>
